# quote-of-the-day-python

./: .gitignore  README.md  azure.yaml  pyproject.toml
.github/workflows/: codeql.yml
infra/: Setup-QuoteOfTheDayExperiment.ps1  main.bicep  main.parameters.json
infra/app/: QuoteOfTheDay.bicep
infra/shared/: appConfiguration.bicep
src/: entrypoint.sh  pyproject.toml  requirements.txt
src/quoteoftheday/: __init__.py  model.py  routes.py
src/templates/: index.html
